--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.2.0",
     "tsc-watch": "^7.2.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@apollo/server": "^5.2.0",
     "@as-integrations/express5": "^1.1.2",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "graphql": "^16.12.0"
+    "graphql": "^16.12.0",
+    "pg": "^8.16.3"
   }
 }
