--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
 services:
+  # PostgreSQL Database
   postgres:
     container_name: threads-db
-    image: postgres
+    image: postgres:16-alpine
+    restart: unless-stopped
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql
+      - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: threads
-      POSTGRES_DB: threads  
-    
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-threads}
+      POSTGRES_DB: ${DB_NAME:-threads}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  postgres_data: 
+  postgres_data:
