--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.11",
+    "clsx": "^2.1.1",
     "graphql": "^16.12.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
