--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "rxjs": "^7.8.2",
     "zustand": "^5.0.9"
   },
