--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "graphql": "^16.12.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.3"
   }
 }
