--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "rxjs": "^7.8.2",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
