--- a/backend/package.json
+++ b/backend/package.json
@@ -34,5 +34,8 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "socket.io": "^4.8.3"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   }
 }
