feat: add supabase

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,21 @@
-# Required
+# Database Configuration
+# For local development (Docker):
 DATABASE_URL=postgresql://postgres:threads@localhost:5432/threads
+DIRECT_URL=postgresql://postgres:threads@localhost:5432/threads
+
+# For production (Supabase):
+# DATABASE_URL=postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true
+# DIRECT_URL=postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:5432/postgres
+
+# JWT Secret (min 32 characters)
 JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters
 
-# Optional
+# Server Configuration
 PORT=8000
 FRONTEND_URL=http://localhost:3000
+
+# Supabase Storage (optional - when not set, files stored locally)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_KEY=your-service-role-key
+SUPABASE_BUCKET=threads-clone
