--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.90.1",
+    "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.16.1",
@@ -29,6 +30,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-window": "^2.2.4",
+    "react-window-infinite-loader": "^2.0.0",
     "rxjs": "^7.8.2",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
