feat : add all docs

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "start": "node dist/src/index.js",
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
