--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/index.js",
+    "start": "npx prisma migrate deploy && node dist/src/index.js",
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
