Refactor code structure for improved readability and maintainability

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
- "scripts": {
-  "build": "tsc",
-  "start": "node dist/src/index.js", 
-  "migrate:prod": "npx prisma migrate deploy",
-  "dev": "tsc-watch --onSuccess \"npm start\""
-},
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/src/index.js",
+    "migrate:prod": "npx prisma migrate deploy",
+    "dev": "tsc-watch --onSuccess \"npm start\""
+  },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
@@ -24,6 +24,7 @@
   "dependencies": {
     "@apollo/server": "^5.2.0",
     "@as-integrations/express5": "^1.1.2",
+    "@faker-js/faker": "^10.2.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@supabase/supabase-js": "^2.90.0",
